--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,41 +1,35 @@
 .main {
-	padding-left: 20px;
-	padding-right: 20px;
 	padding-top: 20px;
+	padding-right: 20px;
+	padding-left: 20px;
 }
 
 .heading {
 	font-size: 48px;
-	text-align: center;
 }
 
 .about {
-	margin: 80px auto 0;
 	font-size: 20px;
 	line-height: 30px;
-	max-width: 500px;
 }
 
 .about a {
 	text-decoration: underline;
 }
 
-/* Phones in landscape */
 @media screen and (orientation:landscape) and (max-height: 430px) {
-	.main {
-		padding-top: 8px;
+	.heading {
+		padding-top: 44px;
 	}
 }
 
 @media screen and (orientation:landscape) and (min-width: 1200px) {
 	.main {
-		width: 1200px;
 		padding: 0;
-		margin: 0 auto;
-		padding-top: 100px;
 	}
 
 	.heading {
+		padding-top: 100px;
 		font-size: 64px;
 	}
 
