--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,6 @@
 :root {
 	--black: hsl(0, 0%, 0%);
 	--bkg: hsl(0, 0%, 10%);
-	--bkg-transparent: hsla(0, 0%, 10%, 0);
 	--white: hsl(0, 0%, 100%);
 	--red: hsl(0, 100%, 50%);
 	--orange: hsl(40, 100%, 50%);
@@ -17,6 +16,26 @@ body {
 	min-height: 100vh;
 	width: 100vw;
 	background: var(--bkg);
+	overflow-x: hidden;
+}
+
+html {
+	--track: none;
+	--thumb: none;
+	scrollbar-width: thin;
+	scrollbar-color: var(--thumb) var(--track);
+}
+
+html::-webkit-scrollbar {
+	width: 0.5vw;
+}
+
+html::-webkit-scrollbar-track {
+	background: var(--track);
+}
+
+html::-webkit-scrollbar-thumb {
+	background: var(--thumb);
 }
 
 *, *::after, *::before {
@@ -35,7 +54,8 @@ li {
 }
 
 h1 {
-	font-family: "Dancing Script", cursive;
+	font-family: "Dancing Script",  cursive;
+	text-align: center;
 }
 
 button {
